fix header, footer, dark mode

--- a/css/card.css
+++ b/css/card.css
@@ -12,7 +12,7 @@
 }
 
 .card:last-of-type {
-  margin-bottom: 65px;
+  margin-bottom: 70px;
 }
 
 .card__question {
